force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_Tall_Cup_Kit__c.field-meta.xml
<CustomField>
    <fullName>FS_Tall_Cup_Kit__c</fullName>
    <label>Drip Tray</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FS_Platform_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>141959: Tall Cup Kit</fullName>
            </value>
            <value>
                <fullName>46717: EXTENDED DRIP TRAY FS7000</fullName>
            </value>
            <value>
                <fullName>XXXXX: 6000 Drip Tray Kit</fullName>
            </value>
            <value>
                <fullName>XXXXX: For Future use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>