force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_Valid_Fill_Notification_Flag__c.field-meta.xml
<CustomField>
    <fullName>FS_Valid_Fill_Notification_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid Fill Notification Flag</label>
    <type>Checkbox</type>
</CustomField>