force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_X4LC_NNS_Tray__c.field-meta.xml
<CustomField>
    <fullName>FS_X4LC_NNS_Tray__c</fullName>
    <label>Boost (4LC) NNS Tray</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FS_Platform_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>46489 : 4LC Tray</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>XXXXX: 4LC Tray</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>