force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_X4LC_NNS_Tray_QTY__c.field-meta.xml
<CustomField>
    <fullName>FS_X4LC_NNS_Tray_QTY__c</fullName>
    <label>Boost (4LC) NNS Tray QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>