force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/FS_X4LC_RCGP_Module_s__c.field-meta.xml
<CustomField>
    <fullName>FS_X4LC_RCGP_Module_s__c</fullName>
    <label>Boost (4LC) RCGP Module/s</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FS_Platform_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>46536 : 4LC RCGP</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>XXXXX: 4LC RCGP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>