force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/Legs__c.field-meta.xml
<CustomField>
    <fullName>Legs__c</fullName>
    <label>Legs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>46436 : FS7000 LEG KIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>