force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/Valance_Qty__c.field-meta.xml
<CustomField>
    <fullName>Valance_Qty__c</fullName>
    <label>Valance Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>