force-app/main/default/objects/FS_IP_Equipment_Package__c/fields/X30_Ice_Maker_Shroud_QTY__c.field-meta.xml
<CustomField>
    <fullName>X30_Ice_Maker_Shroud_QTY__c</fullName>
    <description>30Ã¢â‚¬ï¿½ Ice Maker Shroud</description>
    <label>30Ã¢â‚¬ï¿½ Ice Maker Shroud QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>