force-app/main/default/objects/FS_IP_Equipment_Package__c/validationRules/HFCSPumpKit_TO_RegulatorVacuumDependency.validationRule-meta.xml
<ValidationRule>
    <fullName>HFCSPumpKit_TO_RegulatorVacuumDependency</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(FS_Pump_Kit__c, &#39;45916 : HFCS Pump Kit&#39;),

NOT( ISPICKVAL(FS_Vacuum_Regulator__c, &#39;46409 : Regulator Vacuum (Series 7000)&#39;)), 
AND( OR(ISPICKVAL(FS_Platform_Type__c, &#39;7000&#39;), ISPICKVAL(FS_Platform_Type__c, &#39;7100&#39;)),
 
 NOT( ISNEW() ) ))</errorConditionFormula>
    <errorDisplayField>FS_Vacuum_Regulator__c</errorDisplayField>
    <errorMessage>Order the Vacuum regulator.</errorMessage>
</ValidationRule>